test/spec_vectors/block/fail/module_26.wat
(module (func $type-value-empty-vs-nums (result i32 i32) (block (result i32 i32))))